Bug 212037 - Kopete reestablish connection after link up, even it was in offline mode
Summary: Kopete reestablish connection after link up, even it was in offline mode
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.80.2
Platform: Ubuntu Unspecified
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-27 09:52 UTC by Ben Aceler
Modified: 2013-05-17 13:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ben Aceler 2009-10-27 09:52:09 UTC
Version:           0.80.2 (using KDE 4.3.1)
Installed from:    Ubuntu Packages

Step to reproduce: 

1. Set offline status in kopete.
2. Disconnect internet link manually (just pull out a cable)
3. Connect internet link back

Kopete will connect again.

I think, it's because kopete interact with network managerm which says that link was reestablished, but, if I set kopete to offline, I expect kopete to stay offline.
Comment 1 Benni Hill 2011-03-01 22:44:36 UTC
I submitted a patch to review board that addresses this bug.

http://svn.reviewboard.kde.org/r/6511/
Comment 2 Pali Rohár 2013-05-17 13:51:55 UTC
SVN commit 1355161 by pali:

Automatically logout and login with suspend/resume

This patch logs off each account when PC is suspended and restores the online state of each account on resume.
This patch also addresses another problem of kopete: When the user was setting kopete to "Offline" and the network connection was lost and recovered kopete would reset all accounts to "Online".

Thanks Benni Hill for patch!

Related: bug 149544
Related: bug 149544
FIXED-IN: 4.11
REVIEW: 6511


 M  +10 -0     kopete/kopetedbusinterface.cpp  
 M  +10 -0     kopete/kopetedbusinterface.h  
 M  +4 -0      kopete/org.kde.Kopete.xml  
 M  +28 -0     libkopete/kopeteaccount.cpp  
 M  +12 -0     libkopete/kopeteaccount.h  
 M  +59 -25    libkopete/kopeteaccountmanager.cpp  
 M  +11 -0     libkopete/kopeteaccountmanager.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1355161